--- a/cv-app/package.json
+++ b/cv-app/package.json
@@ -10,7 +10,8 @@
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "uniqid": "^5.4.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@fortawesome/fontawesome-free": "^6.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
